--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,47 +1,97 @@
-# GitHub Action for generating a contribution graph with a snake eating your contributions.
-name: Generate Snake
+name: GitHub Snake Game
 
-# Controls when the action will run. This action runs every 6 hours.
+
+
 on:
-  schedule:
-    - cron: "0 */12 * * *"
 
-# This command allows us to run the Action automatically from the Actions tab.
+  # Schedule the workflow to run daily at midnight UTC
+
+  schedule:
+
+    - cron: "0 0 * * *"
+
+
+
+  # Allow manual triggering of the workflow
+
   workflow_dispatch:
+
+
+
+  # Trigger the workflow on pushes to the main branch
+
   push:
 
-# The sequence of runs in this workflow:
+    branches:
+
+      - main
+
+
+
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+
+  generate:
+
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    timeout-minutes: 10
+
+
+
     steps:
 
-    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
-      - uses: actions/checkout@v2
+      # Step 1: Checkout the repository
 
-    # Generates the snake
-      - uses: Platane/snk/svg-only@v2
-        id: snake-svg
+      - name: Checkout Repository
+
+        uses: actions/checkout@v3
+
+
+
+      # Step 2: Generate the snake animations
+
+      - name: Generate GitHub Contributions Snake Animations
+
+        uses: Platane/snk@v3
+
         with:
-          github_user_name: Sanskargupta0
-          # these next 3 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
+
+          # GitHub username to generate the animation for
+
+          github_user_name: ${{ github.repository_owner }}
+
+
+
+          # Define the output files and their configurations
+
           outputs: |
-            dist/github-contribution-grid-snake.svg?palette=github-light
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=#3c7dd9
-            dist/github-contribution-grid-snake-default.svg?color_snake=#3c7dd9&color_dots=#ebedf0,#9be9a8,#40c463,#30a14e,#216e39
 
-     # show the status of the build. Makes it easier for debugging (if there's any issues).
-      - run: git status
+            dist/github-snake.svg
 
-      # push the content of <build_dir> to a branch
-      - name: push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v2.6.0
-        with:
-          target_branch: output
-          build_dir: dist
+            dist/github-snake-dark.svg?palette=github-dark
+
+            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+
         env:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+
+      # Step 3: Deploy the generated files to the 'output' branch
+
+      - name: Deploy to Output Branch
+
+        uses: peaceiris/actions-gh-pages@v3
+
+        with:
+
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+          publish_dir: ./dist
+
+          publish_branch: output
+
+          # Optionally, you can set a custom commit message
+
+          commit_message: "Update snake animation [skip ci]"
